# recombpy

./: LICENSE  MANIFEST.in  README.md  setup.cfg
examples/: example.map  runExample.sh
src/: main_crossovers.py
src/some_package/: __init__.py  del1.py
src/some_package/ki/: kiko.py
src/utils/: helperfunctions.py  xoverutils.py
