[metadata]
name = darwpy
version = 0.0.1
license = MIT
description = A thin-wrapper for SQLite wit CMD-line utilities
long_description = file: README.md
author = Andreas Kranis
author_email = ...
classifiers=
   databases

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pandas
   sqlparse

[options.packages.find]
where=src